--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,6 +21,19 @@
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </head>
     <body ng-app="Promotions">
-      <div promotion-list></div>
+      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <header class="mdl-layout__header">
+          <div class="mdl-layout__header-row">
+            <span class="mdl-layout-title">Promotion tool</span>
+          </div>
+        </header>
+        <main class="mdl-layout__content">
+          <div class="mdl-grid">
+            <div class="mdl-cell">
+              <div promotion-list></div>
+            </div>
+          </div>
+        </main>
+      </div>
     </body>
 </html>
