--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
         <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </head>
@@ -27,12 +28,7 @@
             <span class="mdl-layout-title">Promotion tool</span>
           </div>
         </header>
-        <main class="mdl-layout__content">
-          <div class="mdl-grid">
-            <div class="mdl-cell">
-              <div promotion-list></div>
-            </div>
-          </div>
+        <main class="mdl-layout__content" ui-view>
         </main>
       </div>
     </body>
