--- a/frontend/src/templates/Promotions.html
+++ b/frontend/src/templates/Promotions.html
@@ -1,18 +1,26 @@
-<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-    <thead>
-    <tr>
-        <th class="mdl-data-table__cell--non-numeric">Name</th>
-        <th class="mdl-data-table__cell--non-numeric">Campaign</th>
-        <th>Starts</th>
-        <th>Expires</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="promotion in promotions">
-        <td class="mdl-data-table__cell--non-numeric">{{promotion.name}}</td>
-        <td class="mdl-data-table__cell--non-numeric">{{promotion.campaignName}}</td>
-        <td>{{promotion.starts | date:"dd MMM yy"}}</td>
-        <td>{{promotion.expires | date:"dd MMM yy"}}</td>
-    </tr>
-    </tbody>
-</table>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col">
+        <h5>Campaigns</h5>
+        <ul class="mdl-list">
+            <li class="mdl-list__item" ng-repeat="campaign in campaigns">
+                <span class="mdl-list__item-primary-content mdl-js-ripple-effect" ui-sref="singleCampaign({code: campaign})">
+                  <span>{{campaign}}</span>
+                </span>
+            </li>
+        </ul>
+    </div>
+    <div class="mdl-cell mdl-cell--4-col">
+        <h5>Promotions</h5>
+        <ul class="mdl-list">
+            <li class="mdl-list__item mdl-list__item--two-line" ng-repeat="promotion in promotions">
+                <span class="mdl-list__item-primary-content">
+                  <span>{{promotion.name}}</span>
+                  <span class="mdl-list__item-sub-title" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap">
+                    {{promotion.description}}
+                  </span>
+                </span>
+            </li>
+        </ul>
+    </div>
+</div>
+
