--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,6 +18,7 @@
         <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-cookies.min.js"></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </head>
@@ -28,6 +29,7 @@
             <span class="mdl-layout-title">Promotion tool</span>
           </div>
         </header>
+        <div stage-menu></div>
         <main class="mdl-layout__content" ui-view>
         </main>
       </div>
