Ability to add/edit campaigns

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -26,7 +26,7 @@
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
           <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Promotion tool</span>
+            <span class="mdl-layout-title" ui-sref="allPromotions">Promotion tool ({{stage.name}})</span>
           </div>
         </header>
         <div stage-menu></div>
