--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -8,16 +8,24 @@
         </div>
         <div class="mdl-cell mdl-cell--12-col mdl-cell--2-offset" mdl-upgrade>
             <div class="mdl-textfield mdl-js-textfield">
-                <textarea class="mdl-textfield__input" type="text" rows= "3" id="description" style="resize: none">{{promotion.description}}</textarea>
+                <textarea class="mdl-textfield__input" type="text" rows= "3" id="description" ng-model="promotion.description" style="resize: none"></textarea>
                 <label class="mdl-textfield__label" for="description">Description</label>
             </div>
         </div>
 
-        <div class="mdl-cell mdl-cell--2-col" ng-repeat="(name, plans) in ratePlans" ng-class="$first ? 'mdl-cell--2-offset' : ''">
+        <div class="mdl-cell mdl-cell--3-col" ng-repeat="(name, plans) in ratePlans" ng-class="$first ? 'mdl-cell--2-offset' : ''">
             <h5>{{name}}</h5>
-            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" ng-repeat="(key, name) in plans" for="checkbox-{{key}}" mdl-upgrade>
-                <input type="checkbox" id="checkbox-{{key}}" class="mdl-checkbox__input" checked>
+            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" ng-repeat="(key, name) in plans" for="checkbox-{{key}}">
+                <input type="checkbox" id="checkbox-{{key}}" class="mdl-checkbox__input" ng-model="ratePlanIds[key]" checked ng-change="ctrl.applyRatePlans(ratePlanIds)">
                 <span class="mdl-checkbox__label">{{name}}</span>
+            </label>
+        </div>
+
+        <div class="mdl-cell mdl-cell--12-col mdl-cell--2-offset">
+            <h5>Availability</h5>
+            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" ng-repeat="group in countryGroups" for="checkbox-{{group.id}}">
+                <input type="checkbox" id="checkbox-{{group.id}}" class="mdl-checkbox__input" ng-model="selectedCountryGroups[group.id]" checked>
+                <span class="mdl-checkbox__label">{{group.name}}</span>
             </label>
         </div>
 
