--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -21,16 +21,22 @@
             </label>
         </div>
 
-        <div class="mdl-cell mdl-cell--12-col mdl-cell--2-offset">
+        <div class="mdl-cell mdl-cell--3-col mdl-cell--2-offset">
             <h5>Availability</h5>
             <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" ng-repeat="group in countryGroups" for="checkbox-{{group.id}}">
-                <input type="checkbox" id="checkbox-{{group.id}}" class="mdl-checkbox__input" ng-model="selectedCountryGroups[group.id]" checked>
+                <input type="checkbox" id="checkbox-{{group.id}}" class="mdl-checkbox__input" ng-model="selectedCountryGroups[group.id]" ng-change="ctrl.applyCountryGroups(selectedCountryGroups)" checked>
                 <span class="mdl-checkbox__label">{{group.name}}</span>
             </label>
+        </div>
+
+        <div class="mdl-cell mdl-cell--3-col">
+            <channel-codes promotion="promotion"></channel-codes>
         </div>
 
         <div class="mdl-cell mdl-cell--12-col mdl-cell--2-offset">
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" ng-click="ctrl.save(promotion)">Update</button>
         </div>
+
+
     </div>
 </form>
