Modal style tweaks

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -1,12 +1,11 @@
 @import "../node_modules/material-design-lite/src/material-design-lite"
 
-
 .modal
   z-index: 2
   position: fixed
   background-color: white
-  left: 20%;
-  right: 20%;
+  left: 20%
+  right: 20%
   bottom: 20%
   top: 20%
 
@@ -24,3 +23,7 @@
   bottom: 0
   left: 0
   right: 0
+
+.mdl-textfield.mdl-textfield__short
+  padding-bottom: 0
+  padding-top: 0
