Initial progress towards promotion type fields

--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -33,6 +33,10 @@
             <channel-codes promotion="promotion"></channel-codes>
         </div>
 
+        <div class="mdl-cell mdl-cell--6-col mdl-cell--2-offset">
+            <promotion-type promotion="promotion"></promotion-type>
+        </div>
+
         <div class="mdl-cell mdl-cell--12-col mdl-cell--2-offset">
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" ng-click="ctrl.save(promotion)">Update</button>
         </div>
