Add date field, use angular-material a lot more

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -1,4 +1,5 @@
 @import "../node_modules/material-design-lite/src/material-design-lite"
+@import "../node_modules/angular-material/angular-material.scss"
 
 .modal
   z-index: 2
@@ -27,3 +28,6 @@
 .mdl-textfield.mdl-textfield__short
   padding-bottom: 0
   padding-top: 0
+
+md-tabs
+  border: 1px solid #e1e1e1
