Add/edit landing page for promotion

--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -36,6 +36,7 @@
         <channel-codes promotion="promotion"></channel-codes>
         <promotion-type promotion="promotion"></promotion-type>
         <promotion-dates promotion="promotion"></promotion-dates>
+        <landing-page landing-page="promotion.landingPage"></landing-page>
         <div>
             <md-button ng-click="ctrl.save(promotion)" class="md-raised md-primary">Update</md-button>
         </div>
