--- a/frontend/src/templates/PromotionDates.html
+++ b/frontend/src/templates/PromotionDates.html
@@ -1,4 +1,8 @@
-<h5>Duration</h5>
-<md-datepicker aria-label="Start date" ng-model="promotion.starts" md-placeholder="Start date"></md-datepicker>
-<md-datepicker ng-show="promotion.expires" aria-label="Expiry date" ng-model="promotion.expires" md-placeholder="Expiry date" delete-empty></md-datepicker>
-<md-button ng-show="!promotion.expires" ng-click="ctrl.addExpiryDate()">Add expiry</md-button>
+<div layout="column">
+    <h5>Duration</h5>
+    <div>
+        <md-datepicker aria-label="Start date" ng-model="promotion.starts" md-placeholder="Start date"></md-datepicker>
+        <md-datepicker ng-show="promotion.expires" aria-label="Expiry date" ng-model="promotion.expires" md-placeholder="Expiry date" delete-empty></md-datepicker>
+        <md-button ng-show="!promotion.expires" ng-click="ctrl.addExpiryDate()">Add expiry</md-button>
+    </div>
+</div>
