--- a/frontend/src/templates/ChannelCodes.html
+++ b/frontend/src/templates/ChannelCodes.html
@@ -1,39 +1,29 @@
-<h5>Channels/Codes</h5>
-<div ng-repeat="(channel, codes) in promotion.codes">
-
-    <h7 ng-click="showModal = true">{{channel}}</h7>
-    <i class="material-icons mdl-list__item-icon" ng-click="ctrl.deleteChannel(promotion.codes, channel)">delete</i>
-
-    <modal title="Edit codes" show="showModal">
-        <div class="mdl-cell mdl-cell--6-col" ng-repeat="code in codes track by $index">
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" >
-                <input class="mdl-textfield__input" type="text" id="code" ng-model="codes[$index]" ng-change="ctrl.codeUpdated(promotion.codes, channel, codes[$index])">
-                <label class="mdl-textfield__label" for="code">Code</label>
+<div layout="column">
+    <h5>Channels/Codes</h5>
+    <md-tabs md-selected="selectedIndex" md-border-bottom md-autoselect>
+        <md-tab layout="column"  ng-repeat="channel in channels" label="{{channel.name}}">
+            <div layout="row" layout-padding>
+                <md-input-container ng-repeat="code in channel.codes track by $index">
+                    <label for="code">Code</label>
+                    <input type="text" id="code" ng-model="channel.codes[$index]" ng-change="ctrl.codeUpdated(channels, channel.name, channel.codes[$index])">
+                </md-input-container>
             </div>
-        </div>
-        <div class="add-code-container">
-            <div class="mdl-grid">
-                <div class="mdl-cell mdl-cell--9-col">
-                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-textfield__short">
-                        <input class="mdl-textfield__input" type="text" id="newCode" ng-model="newCode">
-                        <label class="mdl-textfield__label" for="newCode">Code</label>
-                    </div>
-                </div>
-                <div class="mdl-cell mdl-cell--3-col">
-                    <button class="mdl-button mdl-js-button mdl-button--primary" ng-click="ctrl.addCode(promotion.codes, channel, newCode); newCode = '';">Add code</button>
-                </div>
+            <div layout="row" layout-padding>
+                <md-input-container flex=66>
+                    <label for="newCode">Code</label>
+                    <input type="text" id="newCode" ng-model="newCode">
+                </md-input-container>
+                <md-button flex=33 ng-click="ctrl.addCode(channels, channel.name, newCode); newCode = '';">Add code</md-button>
+                <i class="material-icons mdl-list__item-icon" ng-click="ctrl.deleteChannel(channels, channel)">delete</i>
             </div>
-
-        </div>
-    </modal>
-</div>
-
-<div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input class="mdl-textfield__input" type="text" id="channelName" ng-model="newChannelName">
-        <label class="mdl-textfield__label" for="channelName">Channel name</label>
-    </div>
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--2-offset">
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" ng-click="ctrl.addChannel(promotion.codes, newChannelName); newChannelName = '';">Add channel</button>
+        </md-tab>
+    </md-tabs>
+    <div layout="row">
+        <md-input-container>
+            <input class="mdl-textfield__input" type="text" id="channelName" ng-model="newChannelName">
+            <label class="mdl-textfield__label" for="channelName">Channel name</label>
+        </md-input-container>
+        <md-button ng-click="ctrl.addChannel(newChannelName); newChannelName = '';">Add channel</md-button>
     </div>
 </div>
+
