--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,20 +13,19 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </head>
-    <body ng-app="Promotions">
-      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header">
-          <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title" ui-sref="allPromotions.chooseCampaign">Promotion tool ({{stage.name}})</span>
-          </div>
-        </header>
-        <div stage-menu></div>
-        <main class="mdl-layout__content" ui-view>
-        </main>
-      </div>
+    <body ng-app="Promotions" layout="column">
+      <md-toolbar>
+        <div class="md-toolbar-tools">
+          <span stage-menu></span>
+          <h2>
+            <span ui-sref="allPromotions.chooseCampaign">Promotion tool ({{stage.name}})</span>
+          </h2>
+          <span flex></span>
+        </div>
+      </md-toolbar>
+      <md-content ui-view flex layout="column"></md-content>
     </body>
 </html>
