More style fixes

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,8 +20,8 @@
       <md-toolbar>
         <div class="md-toolbar-tools">
           <span stage-menu></span>
-          <h2>
-            <span ui-sref="allPromotions.chooseCampaign">Promotion tool ({{stage.name}})</span>
+          <h2 class="md-clickable">
+            <span ui-sref="allPromotions.chooseCampaign" >Promotion tool ({{stage.name}})</span>
           </h2>
           <span flex></span>
         </div>
