--- a/frontend/src/templates/CampaignList.html
+++ b/frontend/src/templates/CampaignList.html
@@ -1,22 +1,30 @@
 <div layout="row" layout-align=" stretch" flex>
 
     <!-- campaign list -->
-    <div layout="column" flex="25" style="border-right: 1px solid #BBB" layout-align=" stretch">
+    <div layout="column" flex="33" style="border-right: 1px solid #BBB" layout-align=" stretch">
         <md-list>
             <md-subheader>Campaigns</md-subheader>
             <md-list-item class="md-3-line md-clickable" ng-repeat="campaign in campaigns" md-ink-ripple="#AAAAAA">
-                <div class="md-list-item-text" layout="column" ui-sref="allPromotions.singleCampaign({code: campaign.code})">
-                    <h3>{{ campaign.code }}</h3>
-                    <h4>{{ campaign.name }}</h4>
-                    <p><!-- this space for rent --></p>
+                <div class="md-list-item-text" layout="column">
+                    <div ui-sref="allPromotions.singleCampaign({code: campaign.code})">
+                        <h3>{{ campaign.code }}</h3>
+                        <h4>{{ campaign.name }}</h4>
+                    </div>
+                    <md-icon class="md-secondary" md-font-set="material-icons" ui-sref="editCampaign({code: campaign.code})">mode_edit</md-icon>
                 </div>
                 <md-divider></md-divider>
             </md-list-item>
+            <md-list-item></md-list-item>
         </md-list>
+        <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+            <md-button class="md-fab md-primary" ui-sref="editCampaign" aria-label="Add">
+                <md-icon md-font-set="material-icons">add</md-icon>
+            </md-button>
+        </section>
     </div>
 
     <!-- nested view -->
-    <div layout="column" ui-view flex="75">
+    <div layout="column" ui-view flex="66">
     </div>
 </div>
 
