--- a/frontend/src/templates/PromotionList.html
+++ b/frontend/src/templates/PromotionList.html
@@ -1,14 +1,22 @@
 <md-list>
     <md-subheader>Promotions</md-subheader>
-    <md-list-item class="md-3-line" ng-repeat="promotion in promotions" md-ink-ripple="#AAAAAA">
-        <div class="md-list-item-text" layout="column" ui-sref="allPromotions.singleCampaign({code: campaign.code})">
+    <md-list-item class="md-3-line md-clickable" ng-repeat="promotion in promotions" md-ink-ripple="#AAAAAA">
+        <div class="md-list-item-text" layout="column">
             <h3>{{ promotion.name }}</h3>
-            <h4>{{ promotion.description }}</h4>
+            <h4 style="max-width: 90%">{{ promotion.description }}</h4>
             <p>
                 <md-icon md-font-set="material-icons">date_range</md-icon>
-                {{ promotion.starts | date:"dd MMM yy" }} - {{ promotion.expires | date:"dd MMM yy" }}</p>
-            <p></p>
+                {{ promotion.starts | date:"dd MMM yy" }} - {{ promotion.expires | date:"dd MMM yy" }}
+            </p>
+            <p>
+                <md-icon md-font-set="material-icons" class="md-secondary" ui-sref="editPromotion({uuid: promotion.uuid})">mode_edit</md-icon>
+            </p>
         </div>
         <md-divider></md-divider>
     </md-list-item>
+    <section layout="column" layout-sm="column" layout-align="center center" layout-wrap>
+        <md-button class="md-fab md-secondary" aria-label="Add">
+            <md-icon md-font-set="material-icons">add</md-icon>
+        </md-button>
+    </section>
 </md-list>
