Use tab to add channels

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -25,3 +25,16 @@
 md-tabs
   border: 1px solid #e1e1e1
 
+.tall-tabs
+  height: 350px
+
+.tab-actions-container
+  padding-bottom: 0
+  padding-top: 0
+
+.code-tab
+  padding-left: 8px
+  padding-top: 4px
+
+.code-container
+  margin: 0
