--- a/frontend/src/templates/PromotionList.html
+++ b/frontend/src/templates/PromotionList.html
@@ -9,7 +9,7 @@
                 {{ promotion.starts | date:"dd MMM yy" }} - {{ promotion.expires | date:"dd MMM yy" }}
             </p>
             <p>
-                <md-icon md-font-set="material-icons" class="md-secondary" ui-sref="editPromotion({uuid: promotion.uuid})">mode_edit</md-icon>
+                <md-icon md-font-set="material-icons" class="md-secondary" ui-sref="promotion({uuid: promotion.uuid})">mode_edit</md-icon>
             </p>
         </div>
         <md-divider></md-divider>
