Improve UI for adding campaigns/promotions

--- a/frontend/src/templates/CampaignForm.html
+++ b/frontend/src/templates/CampaignForm.html
@@ -2,11 +2,11 @@
     <div layout="column" layout-padding>
         <h5>Details</h5>
         <md-input-container>
-            <label>Code</label><input type="text" id="code" name="code" ng-model="campaign.code" ng-required="true">
+            <label>Code</label><input type="text" id="code" name="code" ng-model="campaign.code" ng-required="true" disabled>
         </md-input-container>
 
         <md-input-container>
-            <label>Code</label><input type="text" id="name" name="name" ng-model="campaign.name" ng-required="true">
+            <label>Name</label><input type="text" id="name" name="name" ng-model="campaign.name" ng-required="true">
         </md-input-container>
     </div>
     <div>
