--- a/frontend/src/templates/LandingPage.html
+++ b/frontend/src/templates/LandingPage.html
@@ -15,6 +15,7 @@
     <div layout="row">
         <label>Section colour</label>
         <md-radio-group layout="row" ng-model="landingPage.sectionColour">
+            <span flex="5"></span>
             <md-radio-button value="blue" class="md-primary">Blue</md-radio-button>
             <md-radio-button value="grey">Grey</md-radio-button>
             <md-radio-button value="white">White</md-radio-button>
