--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -1,4 +1,4 @@
-<form name="promotionForm">
+<form name="promotionForm" ng-cloak>
     <div layout="column" layout-padding>
 
         <h5>Details</h5>
@@ -10,6 +10,11 @@
         <md-input-container>
             <label>Description</label><textarea ng-model="promotion.description" name="description" rows="3" required></textarea>
         </md-input-container>
+
+        <div layout="column">
+            <h5>Campaign</h5>
+            <span>{{ promotion.campaignCode }}</span>
+        </div>
 
         <rate-plan-list product-rate-plan-ids="promotion.appliesTo.productRatePlanIds"></rate-plan-list>
         <available-countries countries="promotion.appliesTo.countries"></available-countries>
