--- a/frontend/src/templates/CampaignList.html
+++ b/frontend/src/templates/CampaignList.html
@@ -1,9 +1,14 @@
 <div layout="row" layout-align=" stretch" flex>
 
     <!-- campaign list -->
-    <div layout="column" flex="33" style="border-right: 1px solid #BBB" layout-align=" stretch">
+    <md-content layout="column" flex="33" style="border-right: 1px solid #BBB" layout-align=" stretch" md-scroll-y ng-cloak>
         <md-list>
-            <md-subheader>Campaigns</md-subheader>
+            <md-subheader layout="row">
+                <span>
+                    Campaigns
+                    <md-icon class="add-button" md-font-set="material-icons" ui-sref="editCampaign">add</md-icon>
+                </span>
+            </md-subheader>
             <md-list-item class="md-3-line md-clickable" ng-repeat="campaign in campaigns" md-ink-ripple="#AAAAAA">
                 <div class="md-list-item-text" layout="column">
                     <div ui-sref="allPromotions.singleCampaign({code: campaign.code})">
@@ -16,12 +21,7 @@
             </md-list-item>
             <md-list-item></md-list-item>
         </md-list>
-        <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-            <md-button class="md-fab md-primary" ui-sref="editCampaign" aria-label="Add">
-                <md-icon md-font-set="material-icons">add</md-icon>
-            </md-button>
-        </section>
-    </div>
+    </md-content>
 
     <!-- nested view -->
     <div layout="column" ui-view flex="66">
