--- a/frontend/src/templates/PromotionList.html
+++ b/frontend/src/templates/PromotionList.html
@@ -1,22 +1,21 @@
-<md-list ng-cloak>
-    <md-subheader layout="row">
-        <span>
-            Promotions
-            <md-icon class="add-button" md-font-set="material-icons" ui-sref="createPromotion({campaignCode: code})">add</md-icon>
-        </span>
-    </md-subheader>
-    <md-list-item class="md-3-line md-clickable" ng-repeat="promotion in promotions" md-ink-ripple="#AAAAAA">
-        <div class="md-list-item-text" layout="column">
-            <h3>{{ promotion.name }}</h3>
-            <h4 style="max-width: 90%">{{ promotion.description }}</h4>
-            <p>
-                <md-icon md-font-set="material-icons">date_range</md-icon>
-                {{ promotion.starts | date:"dd MMM yy" }} - {{ promotion.expires | date:"dd MMM yy" }}
-            </p>
-            <p>
-                <md-icon md-font-set="material-icons" class="md-secondary" ui-sref="promotion({uuid: promotion.uuid})">mode_edit</md-icon>
-            </p>
-        </div>
-        <md-divider></md-divider>
-    </md-list-item>
-</md-list>
+<md-content md-scroll-y>
+    <md-list ng-cloak>
+        <md-subheader>
+            Promotions <md-icon class="add-button" md-font-set="material-icons" ui-sref="createPromotion({campaignCode: code})">add</md-icon>
+        </md-subheader>
+        <md-list-item class="md-3-line md-clickable" ng-repeat="promotion in promotions" md-ink-ripple="#AAAAAA">
+            <div class="md-list-item-text" layout="column">
+                <h3>{{ promotion.name }}</h3>
+                <h4 style="max-width: 90%">{{ promotion.description }}</h4>
+                <p>
+                    <md-icon md-font-set="material-icons">date_range</md-icon>
+                    {{ promotion.starts | date:"dd MMM yy" }} - {{ promotion.expires | date:"dd MMM yy" }}
+                </p>
+                <p>
+                    <md-icon md-font-set="material-icons" class="md-secondary" ui-sref="promotion({uuid: promotion.uuid})">mode_edit</md-icon>
+                </p>
+            </div>
+            <md-divider></md-divider>
+        </md-list-item>
+    </md-list>
+</md-content>
